# fap2-srv

./: .gitignore  .vimprj_fap2_srv  .vimprj_fap2srv_docs  Makefile.am  configure.ac  fap2srv.pc.in
client/: Makefile.am  bclient.cpp  bclient.h  client_test_main.cpp
dmas/: Makefile.am  daaprov.cpp  daaprov.h  daaproxy.cpp  daaproxy.h  daapxprov.cpp  daapxprov.h  elempx.cpp  elempx.h  mcobspx.cpp  mcobspx.h  mdespx.cpp  mdespx.h  melempx.cpp  melempx.h  mipxprov.h  mlogrecpx.cpp  mlogrecpx.h  mproxy.h  munitpx.cpp  munitpx.h  mvertpx.cpp  mvertpx.h  renv.cpp  renv.h
doc/design/: Makefile  fap2_srv_design.xml
doc/dnotes/: Makefile  fap2_srv_dnotes.xml
doc/requirements/: Makefile  fap2_srv_req.xml
server/: Makefile.am  fapcsbase.cpp  fapcsbase.h  rcreateenv.cpp  rcreateenv.h  reqbase.cpp  reqbase.h  requests.cpp  requests.h  rexec.cpp  rexec.h  rgetmodellist.cpp  rgetmodellist.h  rgetmodelslist.cpp  rgetmodelslist.h  sclient.cpp  sclient.h  sserver.cpp  sserver.h  sthread.cpp
src/: Makefile.am  client_example.c  sclient.cpp  sclient.h  server_main.cpp  sserver.h  sthread.cpp  sthread.h
srvexe/: Makefile.am  server_main.cpp
test/: Makefile.am  ut-fap2srv-lib  ut_base.cpp  ut_bidir_cre.xml  ut_bidir_cre_tr.xml  ut_main.cpp  ut_obs_cre.xml  ut_renva_cre.xml  ut_syst_cre.xml  ut_temp_node.xml  ut_vert_cre.xml
