AM_CPPFLAGS = -D_PLAT_LINUX_ -Wall -g -O2

#bin_PROGRAMS = grayb-client sample_client
bin_PROGRAMS = grayb-client

#sample_client_SOURCES = \
#		       client_example.c

grayb_client_SOURCES = \
                       client_test_main.cpp \
                       bclient.h \
                       bclient.cpp

