AM_CPPFLAGS = -D_PLAT_LINUX_ -Wall -g -O2

#bin_PROGRAMS = sample-srv grayb-srv
bin_PROGRAMS = grayb-srv

#sample_srv_SOURCES = \
#		       server_example.c

grayb_srv_SOURCES = \
		       requests.h \
		       requests.cpp \
		       reqbase.h \
		       reqbase.cpp \
		       rgetmodellist.h \
		       rgetmodellist.cpp \
		       server_main.cpp \
		       sclient.h \
		       sclient.cpp \
		       sthread.h \
		       sthread.cpp \
		       sserver.h \
		       sserver.cpp

