AM_CPPFLAGS = -D_PLAT_LINUX_ -Wall -g -O2

#bin_PROGRAMS = sample-srv sample-client grayb-srv grayb-client
bin_PROGRAMS = grayb-srv grayb-client

sample_srv_SOURCES = \
		       server_example.c
sample_client_SOURCES = \
		       client_example.c


grayb_srv_SOURCES = \
		       server_main.cpp \
		       sclient.h \
		       sclient.cpp \
		       sthread.h \
		       sthread.cpp \
		       sserver.h \
			   sserver.cpp


grayb_client_SOURCES = \
		       client_example.c

